@@ -1,5 +1,9 @@
 === 2.? / 2009-?
 
+* N Major Enhancements
+  * Constant display removed from ri output.  There's no easy way to make them
+    presentable.  Use irb or ruby -e instead.
+
 * N Minor Enhancements
   * API enhancements for writing parsers like the Ruby parser, see
     RDoc::Parser::RubyTools
